tests/neg/effect-order.stk
fun traceDouble(x: Int): Int = x p x + x  // error

traceDouble 5 6 p  // error

1 (5 p) + 2 // error
